--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -18,6 +18,14 @@ Created by Andrey Shpigunov on 19.09.2024.
         }
     }
     
+    @media(--xlarge){
+        @for $i from 0 to 10 {
+            &.xl\:s$(i) > * {
+                margin-top: var(--space-$(i));
+            }
+        }
+    }
+    
     @media(--medium){
         @for $i from 0 to 10 {
             &.md\:s$(i) > * {
@@ -29,6 +37,14 @@ Created by Andrey Shpigunov on 19.09.2024.
     @media(--small){
         @for $i from 0 to 10 {
             &.sm\:s$(i) > * {
+                margin-top: var(--space-$(i));
+            }
+        }
+    }
+    
+    @media(--xsmall){
+        @for $i from 0 to 10 {
+            &.xs\:s$(i) > * {
                 margin-top: var(--space-$(i));
             }
         }
