--- a/src/components/x/flow.css
+++ b/src/components/x/flow.css
@@ -18,9 +18,9 @@ Created by Andrey Shpigunov on 19.09.2024.
         }
     }
     
-    @media(--xlarge){
+    @media(--large){
         @for $i from 0 to 10 {
-            &.xl\:s$(i) > * {
+            &.lg\:s$(i) > * {
                 margin-top: var(--space-$(i));
             }
         }
