--- a/src/components/x/grid.css
+++ b/src/components/x/grid.css
@@ -18,10 +18,10 @@ Created by Andrey Shpigunov on 08.09.2024.
         & .c$(i) { grid-column: span $(i) }
     }
     
-    @media(--xlarge){
+    @media(--large){
         @for $i from 1 to 12 {
-            &.xl\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
-            & .xl\:c$(i) { grid-column: span $(i) }
+            &.lg\:g$(i) { grid-template-columns: repeat($(i), 1fr) }
+            & .lg\:c$(i) { grid-column: span $(i) }
         }
     }
     
